<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@android:style/Theme.NoTitleBar.Fullscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_brushed_metal">

    <LinearLayout
        android:id="@+id/cofig_topbarRootview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/min_margin_cutoff"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/footer_height">

            <TextView
                android:id="@+id/config_ssid_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/min_margin_cutoff"
                android:layout_weight="1"
                android:labelFor="@+id/et_ssid"
                android:text="@string/label_wifi_ssid"
                android:textColor="@android:color/black"
                android:textSize="@dimen/rowitem_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_ssid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical|right"
                android:layout_marginLeft="@dimen/min_margin_cutoff"
                android:layout_marginRight="@dimen/min_margin_cutoff"
                android:layout_weight="1"
                android:background="@null"
                android:editable="true"
                android:hint="@string/hint_ssid"
                android:maxLength="32"
                android:maxWidth="180dp"
                android:minWidth="180dp"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/rowitem_text_size" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/footer_height">

            <TextView
                android:id="@+id/config_passwd_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="@dimen/min_margin_cutoff"
                android:layout_weight="1"
                android:labelFor="@+id/et_password"
                android:singleLine="true"
                android:text="@string/label_wifi_password"
                android:textColor="@android:color/black"
                android:textSize="@dimen/rowitem_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/min_margin_cutoff"
                android:layout_marginRight="@dimen/min_margin_cutoff"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_wifi_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="32"
                android:maxWidth="180dp"
                android:minWidth="180dp"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/rowitem_text_size" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/footer_height"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:id="@+id/config_key_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/min_margin_cutoff"
                android:layout_weight="1"
                android:enabled="false"
                android:labelFor="@+id/et_aesKey"
                android:singleLine="true"
                android:text="@string/label_smartconfig_aes_key"
                android:textColor="@android:color/black"
                android:textSize="@dimen/rowitem_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_aesKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/min_margin_cutoff"
                android:layout_toLeftOf="@+id/config_key_checkbox"
                android:layout_weight="1"
                android:background="@null"
                android:enabled="false"
                android:hint="@string/label_smartconfig_aes_key"
                android:imeOptions="actionNext"
                android:maxLength="16"
                android:maxWidth="150dp"
                android:minWidth="150dp"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/rowitem_text_size" />

            <CheckBox
                android:id="@+id/config_key_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/min_margin_cutoff"
                android:enabled="false" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/config_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/min_margin_cutoff"
            android:indeterminateDrawable="@drawable/smartconfig_progress_drawable"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_startWifiConfig"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/smartconfig_btn_selector_waiting"
                android:gravity="center"
                android:minHeight="@dimen/header_height"
                android:text="@string/label_smartConfig_start"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>